--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 <div class="slide-img" style="background-image: url(./src/images/slider/slid_7.jpg)"></div>
     
                 <div class="container slider-text-box">
-                    <h1>Школа каратэ <nobr>в Гомеле</nobr></h1>
-                    <h2>Традиционное и спортивное каратэ</h2>
+                    <h1>Ресторан <nobr>My Food</nobr></h1>
+                    <h2>Европейская кухня</h2>
                     <div class="main-slider-red-line"></div>
-                    <span>Все возрастные группы</span>
+                    <span>Вкуснейшие блюда</span>
                 </div>
             </div>
 
